Fixed bug with register not showing propper error message for already registered email

--- a/frontend/src/app/features/auth/components/register/register.component.css
+++ b/frontend/src/app/features/auth/components/register/register.component.css
@@ -41,6 +41,13 @@ a{
     text-decoration: none;
     color: #4cae4c;
 }
+
+.error-message{
+    color: red;
+    font-weight: bold;
+}
+
+
 /* Button Styling */
 button[type="submit"] {
   width: 100%;
